# dataminer

./: CMakeLists.txt  MTDataminer.conf  README.md  agenthandler.cpp  agenthandler.h  appveyor.yml  conanfile.py  dataminer.cfg.example  dataminer.cpp  httpreader.cpp  httpreader.h  setmac.ps1  settings.cpp  settings.h  worker.cpp  worker.h  xml2json.cpp
conan/profiles/: vs64
